--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
     <!-- Your code here! -->
+    <link rel="stylesheet" href="/code/phase-0-css-intro-lab/style.css" />
   </head>
 
   <body>
